# cortex

./: .gitignore  ARCHITECTURE.md  CODEX.md  COMPLIANCE.md  CORTEX_ASYNC_MIGRATION_ANALYSIS.md  Dockerfile  HARDENING_COMPLETE.md  MANIFESTO.md  Makefile  README.md  WAVE5_ARCHITECTURE_ANALYSIS.md  WAVE5_BRUTAL_REPORT.md  WAVE5_PROPOSAL_PERSISTENCE_DEPLOYMENT.md  cortex_notebooklm_digest.md  create_nb.py  debug_422.py  docker-compose.yml  generate_god_key.py  ghost_healer.sh  kimi_analysis.md  llms.txt  loop_mejoralo.sh  mkdocs.yml  orchestrator.py  pyproject.toml  repro_422.py  run_bridge.py  seed_codex.py  smoke_test_api.py  test_cdc.db-shm  test_consensus_final.db-shm  test_consensus_final.db-wal  test_ledger_v5.py  test_wave6.db.bak  tools.yaml  tools_external.yaml  verify_codex.py  xray_scan.py
.agent/workflows/: browser-subagent.md  ouroboros.md
.cortex/scripts/: mejora_loop.py
.cortex/workflows/: mejoralo.md
.github/workflows/: ci.yml  release.yml
.mypy_cache/3.14/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compat_pickle.data.json  _compat_pickle.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _interpqueues.data.json  _interpqueues.meta.json  _interpreters.data.json  _interpreters.meta.json  _io.data.json  _io.meta.json  (+280 more)
code-agent-academy/: index.html
code-agent-academy/css/: academy.css  tokens.css
cortex/: __init__.py  api.py  api_deps.py  async_client.py  auth.py  cache.py  canonical.py  chronos.py  cli.py  client.py  compactor.py  compression.py  config.py  connection_pool.py  crypto.py  daemon.py  daemon_cli.py  dashboard.py  embeddings.py  engine.py  engine_async.py  exceptions.py  export.py  federation.py  gate_types.py  graph.py  handoff.py  hive.py  i18n.py  launchpad.py  ledger.py  mcp_server.py  mcp_server_v2.py  mejoralo.py  merkle.py  metrics.py  migrate.py  migrations.py  models.py  pruner.py  (+8 more)
cortex/adk/: tools.py
cortex_hive_ui/: tsconfig.app.json
cortex_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: SOVEREIGN_HANDOFF.md  architecture.md  developer-guide.md  installation.md  scaling_plan.md  wave_5_proposal.md
examples/: curl_cheatsheet.md  postman_collection.json
launchd/: com.moskv.daemon.plist
notebooks/: cortex_notebooklm.ipynb  cortex_notebooklm_prepper.ipynb
open-antigravity-integration/: README.md  cortex_client.py  docker-compose.cortex.yml
saas/: index.html  saas.css
scripts/: backfill_embeddings.py  benchmark_viz.py  create_nb.py  inject_bsl_headers.py  orchestrator.py  seed_time_data.py  synthesize_notebooklm.py  test_vec_caps.py  verify_dashboard_data.py  verify_god_mode.py  xray_scan.py
sdks/python/: README.md  pyproject.toml
sdks/python/cortex_sdk/: __init__.py  client.py
security-agent-school/: PRINCIPLES.md  index.html
site/: sitemap.xml
snapshots/: cortex_snap_20260216_110006_test_snap.json  cortex_snap_20260216_112708_test_snap.json  cortex_snap_20260216_112848_test_snap.json  cortex_snap_20260216_211923_test_snap.json  cortex_snap_20260216_212223_test_snap.json
tests/: conftest.py  test_adaptive_checkpoint.py  test_api.py  test_async_foundation.py  test_auth.py  test_canonical_hash.py  test_cdc.py  test_chronos.py  test_cli_crud.py  test_cloud_storage.py  test_consensus.py  test_consensus_security.py  test_context_engine.py  test_crypto.py  test_daemon.py  test_daemon_cli.py  test_dashboard.py  test_embedding_compression.py  test_engine.py  test_federation.py  test_ghosts.py  test_graph.py  test_graph_rag.py  test_handoff.py  test_hardening.py  test_improvements.py  test_langbase.py  test_llm.py  test_mcp_security.py  test_mcp_server.py  test_mejoralo_engine.py  test_mejoralo_round2.py  test_mejoralo_round6.py  test_mejoralo_round7.py  test_mejoralo_round8.py  test_mejoralo_rounds3_5.py  test_obsidian.py  test_search.py  test_search_sync.py  test_security_hardening.py  (+8 more)
(+3852 files in other folders)
