[project]
name = "cortex-memory"
version = "4.0.0a1"
description = "The Sovereign Ledger for AI Agents — local-first memory infrastructure with vector search, temporal facts, and cryptographic vaults."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Borja Moskv", email = "borja@moskv.com"},
]
keywords = ["ai", "memory", "agents", "sovereign", "vector-search", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
    "onnxruntime>=1.17",
    "click>=8.0",
    "rich>=13.0",
    "neo4j>=5.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio",
    "httpx>=0.27",
]
all = [
    "cortex-memory[api,dev]",
]

[project.scripts]
cortex = "cortex.cli:cli"
moskv-daemon = "cortex.daemon_cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cortex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
