[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-memory-sdk"
version = "0.1.0"
description = "Thin Python SDK for the CORTEX Memory API — zero dependencies."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "MOSKV-1 SYSTEMS" }]
keywords = ["cortex", "memory", "ai", "agents", "sdk", "sovereign"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/borjamoskv/cortex"
Documentation = "https://github.com/borjamoskv/cortex/tree/main/sdks/python"
